# executorch

./: CMakeLists.txt
.ci/docker/ci_commit_pins/: pytorch.txt
backends/cadence/aot/quantizer/: fusion_pass.py
backends/qualcomm/: CMakeLists.txt
backends/qualcomm/aot/ir/: qcir_utils.cpp
backends/qualcomm/runtime/backends/: CMakeLists.txt
backends/xnnpack/: CMakeLists.txt
backends/xnnpack/runtime/: XNNExecutor.cpp  XNNPACKBackend.cpp
examples/apple/coreml/executor_runner/: main.mm  main_sdk.mm
examples/apple/coreml/executor_runner/coreml_executor_runner.xcodeproj/: project.pbxproj
examples/apple/coreml/executor_runner/coreml_executor_runner.xcodeproj/xcshareddata/xcschemes/: coreml_executor_runner.xcscheme
examples/apple/coreml/scripts/: build_executor_runner.sh
examples/demo-apps/apple_ios/LLaMA/LLaMA.xcodeproj/: project.pbxproj
examples/demo-apps/apple_ios/LLaMA/LLaMA.xcodeproj/xcshareddata/xcschemes/: LLaMARunner.xcscheme
examples/models/llama2/: export_llama_lib.py
examples/portable/executor_runner/: executor_runner.cpp
examples/sdk/: CMakeLists.txt  test_sdk_example_runner.sh
examples/sdk/scripts/: export_bundled_program.py
examples/sdk/sdk_example_runner/: sdk_example_runner.cpp
exir/verification/: verifier.py
runtime/core/portable_type/: half.h  tensor_impl.cpp
shim/: BUCK  shims.bzl
shim/build_defs/: auto_headers.bzl  prebuilt_cpp_library.bzl
